@@ -27,46 +27,46 @@ import org.powermock.reflect.Whitebox;
 import org.testng.annotations.Test;
 
 /*
- * Javassist handler that takes care of cleaing up {@link MockRepository} state
+ * Javassist handler that takes care of cleaning up {@link MockRepository} state
  * after each method annotated with {@link Test}.
  */
 public class PowerMockTestNGMethodHandler implements MethodHandler {
 
-    private Object annotationEnabler;
+	private Object annotationEnabler;
 
-    public PowerMockTestNGMethodHandler(Class<?> testClass) {
-        try {
-            Class<?> annotationEnablerClass = Class.forName("org.powermock.api.extension.listener.AnnotationEnabler");
-            annotationEnabler = Whitebox.newInstance(annotationEnablerClass);
-        } catch (ClassNotFoundException e) {
-            annotationEnabler = null;
-        }
-    }
+	public PowerMockTestNGMethodHandler(Class<?> testClass) {
+		try {
+			Class<?> annotationEnablerClass = Class.forName("org.powermock.api.extension.listener.AnnotationEnabler");
+			annotationEnabler = Whitebox.newInstance(annotationEnablerClass);
+		} catch (ClassNotFoundException e) {
+			annotationEnabler = null;
+		}
+	}
 
-    public Object invoke(Object self, Method thisMethod, Method proceed, Object[] args) throws Throwable {
-        injectMocksUsingAnnotationEnabler(self);
-        final Object result = proceed.invoke(self, args);
-        if (thisMethod.isAnnotationPresent(Test.class)) {
-            clearMockFields();
-            MockRepository.clear();
-        }
-        return result;
-    }
+	public Object invoke(Object self, Method thisMethod, Method proceed, Object[] args) throws Throwable {
+		injectMocksUsingAnnotationEnabler(self);
+		final Object result = proceed.invoke(self, args);
+		if (thisMethod.isAnnotationPresent(Test.class)) {
+			clearMockFields();
+			MockRepository.clear();
+		}
+		return result;
+	}
 
-    private void clearMockFields() throws Exception, IllegalAccessException {
-        if (annotationEnabler != null) {
-            Set<Field> mockFields = Whitebox.getFieldsAnnotatedWith(this, Whitebox.<Class<? extends Annotation>[]> invokeMethod(annotationEnabler,
-                    "getMockAnnotations"));
-            for (Field field : mockFields) {
-                field.set(this, null);
-            }
-        }
-    }
+	private void clearMockFields() throws Exception, IllegalAccessException {
+		if (annotationEnabler != null) {
+			Set<Field> mockFields = Whitebox.getFieldsAnnotatedWith(this, Whitebox.<Class<? extends Annotation>[]> invokeMethod(annotationEnabler,
+					"getMockAnnotations"));
+			for (Field field : mockFields) {
+				field.set(this, null);
+			}
+		}
+	}
 
-    private void injectMocksUsingAnnotationEnabler(Object self) throws Exception {
-        if (annotationEnabler != null) {
-            Whitebox.invokeMethod(annotationEnabler, "beforeTestMethod", new Class<?>[] { Object.class, Method.class, Object[].class }, self, null,
-                    null);
-        }
-    }
+	private void injectMocksUsingAnnotationEnabler(Object self) throws Exception {
+		if (annotationEnabler != null) {
+			Whitebox.invokeMethod(annotationEnabler, "beforeTestMethod", new Class<?>[] { Object.class, Method.class, Object[].class }, self, null,
+					null);
+		}
+	}
 }
