@@ -1,0 +1,34 @@
+/*
+ * Copyright 2009 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.powermock.reflect.testclasses;
+
+import java.io.Serializable;
+
+@SuppressWarnings("unused")
+public class ClassWithSerializableState {
+
+	private Serializable serializable;
+
+	private Object[] objectArray;
+
+	public void setSerializable(Serializable serializable) {
+		this.serializable = serializable;
+	}
+
+	public void setObjectArray(Object[] objectArray) {
+		this.objectArray = objectArray;
+	}
+}
